# nocast

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEV.md  LICENSE  README.md  TODO.md  installpl.fish  nocast.toml  plugincore.js  uninstallplugin.fish
coreplugins/calculator/: Cargo.toml  manifest.toml  nocast.toml
coreplugins/calculator/plugins/: calculator.toml
coreplugins/calculator/src/: lib.rs
coreplugins/files/: Cargo.toml  manifest.toml
coreplugins/files/src/: lib.rs  search.rs
coreplugins/linuxlauncher/: Cargo.toml  manifest.toml
coreplugins/linuxlauncher/src/: findapps.rs  lib.rs  runexec.rs
coreplugins/sample/: Cargo.toml  manifest.toml
coreplugins/template/: Cargo.toml
coreplugins/template/src/: lib.rs
plugins/: template.toml
plugins/linuxapplauncher/: list-apps.js  manifest.toml
src/: DEV.md  app.rs  config.rs  config_app.rs  engine.rs  generic_types.rs  init.rs  main.rs  managepl.rs  monitor.rs  ncpr.rs  plugins.rs  setup.rs  ui.rs  utils.rs  win.rs
