[package]
name = "nocast"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
toml = "0.8.23"
eframe = "0.31.1"
egui = "0.31.1"
winit = "0.29.15"
regex = "1.11.1"
libloading = "0.8.8"
serde_json = "1.0.140"
device_query = "4.0.0"
dark-light = "2.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
